#2 fixed for chat and edit.
